<resources>
    <string name="app_name">Digimind_173151</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="lunes">Monday</string>
    <string name="martes">Tuesday</string>
    <string name="miercoles">Wednesday</string>
    <string name="jueves">Thursday</string>
    <string name="viernes">Friday</string>
    <string name="sabado">Saturday</string>
    <string name="domingo">Sunday</string>
</resources>
